tests/error/non_default_constructible_variable.bz
// error: variable type '*int32' is not default constructible and must be initialized
function test()
{
	mut _: *int32;
}
